service.yml
kind: Service
apiVersion: v1
metadata:
  name: feedback-service
spec:
  selector:
    app: feedback-service
  ports:
    - port: 8082 # Default port for image
